--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -3,11 +3,14 @@ Create tabs with an icon and label, using the tabs-positive style.
 Each tab's child <ion-nav-view> directive will have its own
 navigation history that also transitions its views in and out.
 -->
-<ion-tabs class="tabs-icon-top tabs-color-active-positive">
+<ion-tabs class="tabs-icon-top tabs-color-active-positive" ng-controller="BackCtrl">
 
   <!-- Places Tab -->
-  <ion-tab title="Patagonia" icon-off="ion-map-outline" icon-on="ion-map" href="#/tab/places">
+  <ion-tab title="Patagonia" icon-off="ion-map" icon-on="ion-map" href="#/tab/places" ng-click="myGoBack()">
     <ion-nav-view name="tab-places"></ion-nav-view>
+  </ion-tab>
+  <ion-tab title="Regulaciones" icon-off="ion-ios-list" icon-on="ion-ios-list" href="#/tab/regulations">
+    <ion-nav-view name="tab-regulations"></ion-nav-view>
   </ion-tab>
 
 </ion-tabs>
