--- a/www/templates/tab-map.html
+++ b/www/templates/tab-map.html
@@ -6,7 +6,7 @@ The Friends service returns an array of friend data
 -->
 <ion-view hide-tabs>
   <ion-nav-title>
-    {{place.name}}
+    <img ng-src="img/front/logo-v2.png" width="120" height="25"></div>
   </ion-nav-title>
   <ion-content>
     <div id="map_canvas">
