--- a/www/templates/place-detail.html
+++ b/www/templates/place-detail.html
@@ -6,328 +6,191 @@ The Friends service returns an array of friend data
 -->
 <ion-view hide-tabs>
   <ion-nav-title>
-    {{place.name}}
-  </ion-nav-title>
-  <ion-content class="">
-    <div class="">
-      <div class="">
-        <ion-slide-box on-slide-changed="slideHasChanged($index)">
-          <ion-slide ng-repeat="placeImage in place.url_images_detail">
-            <img class="full-image" ng-src="{{placeImage}}">
-            <div class="row place-info">
-              <div class="left col-80">
-                <h2>{{place.name}}</h2>
-              </div>
-              <div class="col">
-                <a href="#/tab/map">
-                  <i class="ion-map detail-icon"></i>
-                </a>
-              </div>
-              <!--<div class="col right">
+    <img ng-src="img/front/logo-v2.png" width="120" height="25"></div>
+</ion-nav-title>
+<ion-content>
+  <div>
+    <div>
+      <ion-slide-box on-slide-changed="slideHasChanged($index)">
+        <ion-slide ng-repeat="placeImage in place.url_images_detail">
+          <img class="full-image" ng-src="{{resizeCloudinaryImage(placeImage,'/c_crop,h_280,w_640')}}">
+          <div class="row place-info">
+            <div class="left col-80">
+              <h2>
+                <bold>{{place.name}}</bold>
+              </h2>
+            </div>
+            <div class="col">
+              <a ng-href="#/tab/places/{{place.id}}/map">
+                <i class="ion-map detail-icon"></i>
+              </a>
+            </div>
+            <!--<div class="col right">
                 <span class="rating">4.8</span>
               </div>-->
+          </div>
+        </ion-slide>
+        <ion-slide>
+          <img class="full-image" ng-src="https://maps.googleapis.com/maps/api/staticmap?center={{place.coordinates[0].lat}},{{place.coordinates[0].lng}}&zoom=7&size=325x142&format=png&markers=color:red|label:C|{{place.coordinates[0].lat}},{{place.coordinates[0].lng}}">
+          <div class="row place-info">
+            <div class="left col-80">
+              <h2>
+                <bold>{{place.name}}</bold>
+              </h2>
             </div>
-          </ion-slide>
-        </ion-slide-box>
-      </div>
+            <div class="col">
+              <a ng-href="#/tab/places/{{place.id}}/map">
+                <i class="ion-map detail-icon"></i>
+              </a>
+            </div>
+            <!--<div class="col right">
+                <span class="rating">4.8</span>
+              </div>-->
+          </div>
+        </ion-slide>
+      </ion-slide-box>
     </div>
-    <div class="row icons-details">
-      <div class="col">
-        <img ng-src="img/front/ico1.png" width="60" height="60">
-        <span>Navegable</span>
-      </div>
-      <div class="col">
-        <img ng-src="img/front/ico2.png" width="60" height="60">
-        <span>Orilla</span>
-      </div>
-      <div class="col">
-        <img ng-src="img/front/ico3.png" width="60" height="60">
-        <span>Nº5</span>
-      </div>
-      <div class="col">
-        <img ng-src="img/front/ico4.png" width="60" height="60">
-        <span>Río</span>
-      </div>
-      <div class="col">
-        <img ng-src="img/front/ico5.png" width="60" height="60">
-        <span>Privado</span>
-      </div>
+  </div>
+
+  <div class="list card">
+    <div class="item header-details">
+      <h2 class="text-left">
+        {{place.address}}
+      </h2>
     </div>
-    <div class="list card">
-      <div class="item header-details">
-        <h2 class="text-left">
-          Descripción
-        </h2>
-      </div>
-      <div class="item-body">
-        <p>{{place.description}}</p>
-        <div class="icons-info">
+    <div class="item-body">
+      <p>{{place.description}}</p>
+      <a ng-href="comgooglemaps://?daddr={{place.coordinates[0].lat}},{{place.coordinates[0].lng}}" target="_system" class="button button-small button-dark access-btn center">
+        ¿Como llegar?
+      </a>
+    </div>
+  </div>
+</div>
+</div>
+
+<div class="list card">
+<div class="item header-details">
+  <h2 class="text-left">
+    Informacion de pesca
+  </h2>
+</div>
+<div class="item-body">
+  <p>{{place.description_where_fish}}</p>
+  <div class="item">
+    <div class="icon-list">
+      <img ng-src="img/front/ico9.png" width="40" height="40">
+      <span>Caudal :
+        {{currentMonthlyAverage(place.monthly_average_flow)}}
+        m3/seg</span>
+    </div>
+    <div class="icon-list">
+      <img ng-src="img/front/ico10.png" width="40" height="40">
+      <span>Profundidad :
+        {{place.depth}}
+        mts</span>
+    </div>
+    <div class="icon-list">
+      <img ng-src="img/front/ico11.png" width="40" height="40">
+      <span>Turbiedad :
+        {{currentMonthlyAverage(place.monthly_average_turbidity)}}
+        ntu</span>
+    </div>
+    <div class="icon-list">
+      <img ng-src="img/front/ico13.png" width="40" height="40">
+      <span>Tº del agua :
+        {{currentMonthlyAverage(place.monthly_average_water_temperature)}}
+        º</span>
+    </div>
+    <div class="icon-list">
+      <img ng-src="img/front/ico12.png" width="40" height="40">
+      <span>Tº ambiente actual :
+        {{wheater.main.temp}}
+        º</span>
+    </div>
+    <div class="icon-list">
+      <img ng-src="img/front/ico15.png" width="40" height="40">
+      <span>Viento actual :
+        {{wheater.wind.speed}}
+        mts/seg</span>
+    </div>
+  </div>
+</div>
+</div>
+
+<!--<div class="tips">
+<div class="col">
+  <span class="tip-ico">TIP</span>
+</div>
+<div class="tip-info">
+  Acá podemos incluir algun tipo de tips o notificación de la aplicación
+  <button class="button button-block button-dark button-tip">NOTIFICARME</button>
+</div>
+</div>-->
+
+<div class="list card">
+<div class="item header-details">
+  <h2 class="text-left">
+    Principales especies
+  </h2>
+</div>
+<div class="item item-body">
+  <ion-slide-box on-slide-changed="slideHasChanged($index)">
+    <ion-slide ng-repeat="fish in place.fishes">
+      <div class="">
+        <div class="info-titles">
           <p>
-            <i class="ion-leaf details-icons"></i>
-            <strong>Medio Ambiente :</strong>
-            <span ng-repeat="environments_description in place.environments_description">
-              {{environments_description}}
-            </p>
-            <!--<p>
-            <i class="ion-leaf details-icons"></i>
-            <strong>Fauna asociada :</strong>
-            <span ng-repeat="fauna in place.fauna">
-              {{fauna}}{{$last ? "" : ","}}
-            </strong>
-          </p>-->
-          </div>
+            <strong>{{fish.name}}</strong>
+          </p>
+          {{fish.scientific_name}}
+        </div>
+        <div class="item-image">
+          <img class="full-image" ng-src="{{resizeCloudinaryImage(fish.url_images_front,'/c_crop,h_200,w_640')}}">
+        </div>
+        <div class="item-body">
+          <p>{{fish.description}}</p>
+          <p>
+            <i class="ion-android-archive details-icons"></i>
+            <strong>Peso promedio :</strong>
+            {{fish.average_weight}}
+          </p>
+          <p>
+            <i class="ion-crop details-icons"></i>
+            <strong>Tamaño promedio :</strong>
+            {{fish.average_size}}
+          </p>
         </div>
       </div>
-      <div class="list card">
-        <div class="item header-details">
-          <h2 class="text-left">
-            Informacion
-          </h2>
-        </div>
-        <div class="item item-text-wrap">
-          <div class="">
-            <div class="item">
-              <p>
-                <i class="ion-waterdrop details-icons"></i>
-                <strong>Caudal :</strong>
-                <span>{{place.flow}}</span>
-                mts2/seg
-              </p>
-              <p>
-                <i class="ion-arrow-down-c details-icons"></i>
-                <strong>Profundidad :</strong>
-                <span>{{place.depth}}</span>
-                mts
-              </p>
-              <p>
-                <i class="ion-flash details-icons"></i>
-                <strong>Turbiedad :</strong>
-                <span>{{place.turbidity}}</span>
-              </p>
-              <p>
-                <i class="ion-thermometer details-icons"></i>
-                <strong>Tº Ambiente :</strong>
-                <span>
-                  {{wheater.main.temp}}
-                </span>
-              </p>
-              <p>
-                <i class="ion-thermometer details-icons"></i>
-                <strong>Tº promedio del agua :</strong>
-                <span ng-repeat="average_water_temperature in place.average_water_temperature">
-                  {{average_water_temperature}}{{$last ? "" : ","}}
-                </span>
-              </p>
-              <p>
-                <i class="ion-paper-airplane details-icons"></i>
-                <strong>Velocidad del viento :</strong>
-                <span>
-                  {{wheater.wind.speed}}
-                  mts/seg
-                </span>
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="tips">
-        <div class="col">
-          <span class="tip-ico">TIP</span>
-        </div>
-        <div class="tip-info">
-          Acá podemos incluir algun tipo de tips o notificación de la aplicación
-          <button class="button button-block button-dark button-tip">NOTIFICARME</button>
-        </div>
-      </div>
-      <div class="list card">
-        <div class="item header-details">
-          <h2 class="text-left">
-            Principales especies
-          </h2>
-        </div>
-        <div class="item item-body">
-          <ion-slide-box on-slide-changed="slideHasChanged($index)">
-            <ion-slide ng-repeat="fish in place.fishes">
-              <div class="">
-                <div class="info-titles">
-                  <p>
-                    <strong>{{fish.name}}:</strong>
-                    {{fish.scientific_name}}</p>
-                </div>
-                <div class="item-image">
-                  <img class="full-image" ng-src="{{fish.url_images_front}}">
-                </div>
-                <div class="item-body">
-                  <p>{{fish.description}}</p>
-                  <p>
-                    <i class="ion-android-archive details-icons"></i>
-                    <strong>Peso promedio :</strong>
-                    {{fish.average_weight}}
-                  </p>
-                  <p>
-                    <i class="ion-crop details-icons"></i>
-                    <strong>Tamaño promedio :</strong>
-                    {{fish.average_size}}
-                  </p>
-                </div>
-              </div>
-            </ion-slide>
-          </ion-slide-box>
-        </div>
-      </div>
+    </ion-slide>
+  </ion-slide-box>
+</div>
+</div>
 
-      <div class="list card">
-        <div class="item header-details">
-          <h2 class="text-left">
-            Accesos
-          </h2>
+<div class="list card">
+<div class="item header-details">
+  <h2 class="text-left">
+    Moscas recomendadas
+  </h2>
+</div>
+<div class="item item-body">
+  <ion-slide-box on-slide-changed="slideHasChanged($index)">
+    <ion-slide ng-repeat="flyFishing in place.flies">
+      <div class="">
+        <div class="info-titles">
+          <p>
+            <strong>{{flyFishing.name}}</strong>
+          </p>
+          {{flyFishing.fly_type}}
         </div>
-        <div class="item item-text-wrap">
-          <div class="row access-info" ng-repeat="access in place.access">
-            <div class="col">
-              <img ng-src="img/front/ico-access.png" width="35" height="35">
-            </div>
-            <div class="col-80">
-              <h2>{{access.title}}</h2>
-              <p>{{access.desciption}}</p>
-              <br/>
-              <p>
-                <i class="ion-android-car details-icons"></i>
-                <strong>Tipo de acceso vehicular :</strong>
-                <span ng-repeat="vehicle_access in access.vehicle_access">
-                  {{vehicle_access}}{{$last ? "" : ","}}
-                </span>
-              </p>
-              <p>
-                <i class="ion-android-walk details-icons"></i>
-                <strong>Tipo de acceso peatonal :</strong>
-                <span ng-repeat="pedestrian_access in access.pedestrian_access">
-                  {{pedestrian_access}}{{$last ? "" : ","}}
-                </span>
-              </p>
-              <div class="">
-                <button class="button button-small button-dark access-btn">
-                  Ver en Mapa
-                </button>
-              </div>
-            </div>
-          </div>
+        <div class="">
+          <img class="full-image" ng-src="{{resizeCloudinaryImage(flyFishing.url_images_front,'/c_crop,h_200,w_640')}}">
+        </div>
+        <div class="item-body">
+          {{flyFishing.description}}
         </div>
       </div>
-      <!--  <div class="list card">
-      <div class="item header-details">
-        <h2 class="text-left">
-          Alrededores
-        </h2>
-      </div>
-      <div class="item item-body">
-        <div class="card near-places">
-          <div class="item item-image">
-            <img ng-src="{{place.url_images_front}}">
-            <div class="row place-info">
-              <div class="left col-80">
-                <h2>{{place.name}}</h2>
-              </div>
-              <div class="col right">
-                <span class="rating">4.8</span>
-              </div>
-            </div>
-          </div>
-          <div class="row place-details">
-            <div class="col">
-              <i class="icon ion-ios-sunny custom-icons"></i>
-              Bosque, Montaña</div>
-          </div>
-        </div>
-        <div class="card near-places">
-          <div class="item item-image">
-            <img ng-src="img/{{place.url_images_front}}">
-            <div class="row place-info">
-              <div class="left col-80">
-                <h2>{{place.name}}</h2>
-              </div>
-              <div class="col right">
-                <span class="rating">4.8</span>
-              </div>
-            </div>
-          </div>
-          <div class="row place-details">
-            <div class="col">
-              <i class="icon ion-ios-sunny custom-icons"></i>
-              Bosque, Montaña</div>
-          </div>
-        </div>
-        <div class="card near-places">
-          <div class="item item-image">
-            <img ng-src="img/{{place.url_images_front}}">
-            <div class="row place-info">
-              <div class="left col-80">
-                <h2>{{place.name}}</h2>
-              </div>
-              <div class="col right">
-                <span class="rating">4.8</span>
-              </div>
-            </div>
-          </div>
-          <div class="row place-details">
-            <div class="col">
-              <i class="icon ion-ios-sunny custom-icons"></i>
-              Bosque, Montaña</div>
-          </div>
-        </div>
-      </div>
-    </div>-->
-      <!--Hola!, acá comento los insectos-->
-      <!-- <div class="list card">
-      <div class="item header-details">
-        <h2 class="text-left">
-          Principales insectos
-        </h2>
-      </div>
-      <div class="item item-body">
-        <ion-slide-box on-slide-changed="slideHasChanged($index)">
-          <ion-slide ng-repeat="insect in place.insects">
-            <div class="">
-              <div class="info-titles">
-                <p><strong>{{insect.name}}:</strong> {{insect.insect_type}}</p>
-              </div>
-              <div class="item item-image">
-                <img class="full-image" ng-src="img/{{insect.url_images_front}}">
-              </div>
-              <div class="item item-body">
-                <p>{{insect.description}}</p>
-              </div>
-            </div>
-          </ion-slide>
-        </ion-slide-box>
-      </div>
-    </div> -->
-
-      <!--Hola!, acá esta comentado las moscas-->
-
-      <!-- <div class="list card">
-      <div class="item header-details">
-        <h2 class="text-left">
-          Principales moscas de pescas
-        </h2>
-      </div>
-      <div class="item item-body">
-        <ion-slide-box on-slide-changed="slideHasChanged($index)">
-          <ion-slide ng-repeat="flyFishing in place.flies">
-            <div class="">
-              <div class="info-titles">
-                <p><strong>{{flyFishing.name}}:</strong> {{flyFishing.fly_type}}</p>
-              </div>
-              <div class="">
-                <img class="full-image" ng-src="img/{{flyFishing.url_images_front}}">
-              </div>
-              <div class="item-body">
-                {{flyFishing.description}}
-              </div>
-            </div>
-          </ion-slide>
-        </ion-slide-box>
-      </div>
-    </div> -->
-    </ion-content>
-  </ion-view>
+    </ion-slide>
+  </ion-slide-box>
+</div>
+</div>
+</ion-content>
+</ion-view>
