agregate side-menus

--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -12,5 +12,11 @@ navigation history that also transitions its views in and out.
   <ion-tab>
     <ion-nav-view name="tab-regulations"></ion-nav-view>
   </ion-tab>
+  <ion-tab>
+    <ion-nav-view name="tab-condition"></ion-nav-view>
+  </ion-tab>
+  <ion-tab>
+    <ion-nav-view name="tab-language"></ion-nav-view>
+  </ion-tab>
 
 </ion-tabs>
