changes for desing flyapp3

--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -1,4 +1,4 @@
-$custom-nav: #009688;
+$custom-nav: #188330;
 $custom-nav-color: #ffffff;
 $base-background-color: #ffffff !default;
 $base-color: #666666 !default;
@@ -26,10 +26,12 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 .ion-ios-arrow-back {
   color: #fff;
 }
+
 .place-info {
   position: absolute;
   bottom: 0;
-  padding: 15px;
+  padding: 10px 15px;
+  background: rgba(0, 0, 0, .4);
   .left {
     text-align: left;
     padding: 0;
@@ -47,7 +49,7 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
     float: right;
     text-align: right;
     .rating {
-      background-color: #F56C0E;
+      background-color: #FF5400;
       color: #fff;
       padding: 5px 10px;
       border-radius: 2px;
@@ -237,5 +239,74 @@ strong {
     position: relative;
     padding: 10px;
     font-weight: 500;
+  }
+}
+
+.button-clear{
+  color: #fff!important;
+}
+
+.sidebar-header{
+  color: #fff;
+}
+
+.language{
+  margin: 50px 0;
+  text-align: center;
+  h1{
+    color: #222;
+    font-size: 24px;
+  }
+}
+
+.confirm{
+  margin: 40px 0;
+  padding: 0 15px;
+}
+
+.button-confirm{
+  border-radius: 2px;
+  background: #007219;
+  color: #fff;
+  font-weight: 500;
+}
+
+.button-confirm:hover{
+  color: #fff;
+  background: #0E7425;
+}
+
+.lg{
+  position: relative;
+  display: inline-block;
+  padding: 0 0 0 10px;
+  bottom: 3px;
+}
+
+.terms-content{
+  background: #188330;
+}
+
+.terms{
+  margin: 50px 0;
+  text-align: center;
+  padding: 0 55px;
+  h1{
+    color: #fff;
+    font-size: 24px;
+  }
+  p{
+    color: #C5E0CB;
+    font-size: 16px;
+  }
+}
+
+.policy{
+  text-align: center;
+  p{
+    color: #fff;
+  }
+  a{
+    color: #fff;
   }
 }
