--- a/www/templates/tab-condition.html
+++ b/www/templates/tab-condition.html
@@ -1,9 +1,18 @@
 <ion-view hide-tabs>
-  <ion-nav-title>
-    <img ng-src="img/front/logo-v2.png" width="120" height="25"></div>
-  <!--<a class="button button-clear" href="#/tab/regulations"><i class="ion-levels navbar-icon"></i></a>-->
-</ion-nav-title>
-<ion-content>
-
-</ion-content>
+    <ion-nav-title>
+    </ion-nav-title>
+    <ion-content class="terms-content">
+        <div class="content terms">
+            <h1>Terminos de Uso</h1>
+            <p>You must agree to Read Water Patagonia Terms and Conditions and Privacy Policy to use the app</p>
+        </div>
+        <div class="confirm">
+            <button class="button button-block button-confirm">
+                ACEPTAR
+            </button>
+        </div>
+        <div class="policy">
+          <p>Leer <a href=""> Políticas de Privacidad</a> y <a href=""> Términos de Uso</a></p>
+        </div>
+    </ion-content>
 </ion-view>
