--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -1,11 +1,11 @@
 <ion-side-menus enable-menu-with-back-views="false">
   <ion-side-menu-content>
-    <ion-nav-bar class="bar-stable">
+    <ion-nav-bar class="custom-bar">
       <ion-nav-back-button>
       </ion-nav-back-button>
 
       <ion-nav-buttons side="left">
-        <button class="button button-icon button-clear ion-navicon" menu-toggle="left">
+        <button class="button button-icon button-clear ion-navicon custom-clear-button" menu-toggle="left">
         </button>
       </ion-nav-buttons>
     </ion-nav-bar>
@@ -13,19 +13,22 @@
   </ion-side-menu-content>
 
   <ion-side-menu side="left">
-    <ion-header-bar class="bar-stable">
-      <h1 class="title">Left</h1>
+    <ion-header-bar class="custom-bar">
+      <h1 class="title sidebar-header">Configuraciones</h1>
     </ion-header-bar>
     <ion-content>
       <ion-list>
         <ion-item menu-close href="#/tab/places">
-          Places
+          Descubrir lugares
         </ion-item>
         <ion-item menu-close href="#/tab/language">
           Idioma
         </ion-item>
         <ion-item menu-close href="#/tab/condition">
-          Condiciones
+          Términos de Uso
+        </ion-item>
+        <ion-item menu-close href="#/tab/regulations">
+          Regulaciones
         </ion-item>
       </ion-list>
     </ion-content>
